Update docker-compose.yml with PostgreSQL and Adminer services & update readme.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ MYSQL_PASSWORD=sayuwanttodie
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=toxo
+
+JWT_SECRET=iLoveUForeverAndEverUntilTheEndOfTime
