--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  mysql:
-    image: mysql:latest
+  db:
+    image: postgres:latest
+    restart: unless-stopped
+    # set shared memory limit when using docker-compose
+    shm_size: 128mb
     ports:
-      - 3306:3306
+      - ${PG_PORT}:5432
     environment:
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: ${PG_DATABASE}
+
+  adminer:
+    image: adminer
+    restart: unless-stopped
+    ports:
+      - 8080:8080
