apdet env ngikutin notion

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-# docker-compose
-MYSQL_USER=sayu
-MYSQL_PASSWORD=sayuwanttodie
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_DATABASE=toxo
+DB_NAME=toxo
+DB_PORT=5432
+DB_HOST=localhost
+DB_USERNAME=sayu
+DB_PASSWORD=sayuwanttodie
+
+PROMETHEUS_ADDRESS=
 
 JWT_SECRET=iLoveUForeverAndEverUntilTheEndOfTime
+BCRYPT_SALT=8 # jangan pake 8 di prod! pake > 10
+
+S3_ID=
+S3_SECRET_KEY=
+S3_BASE_URL=
