--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DB_HOST=localhost
 DB_USERNAME=sayu
 DB_PASSWORD=sayuwanttodie
 
+PORT=8000
+HOST=0.0.0.0
+
 PROMETHEUS_ADDRESS=
 
 JWT_SECRET=iLoveUForeverAndEverUntilTheEndOfTime
