update garam ke env

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ PROMETHEUS_ADDRESS=
 
 JWT_SECRET=iLoveUForeverAndEverUntilTheEndOfTime
 BCRYPT_SALT=8 # jangan pake 8 di prod! pake > 10
+JWT_EXPIRATION=3600 #1 hour
 
 S3_ID=
 S3_SECRET_KEY=
