--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       - S3_BUCKET_NAME=${S3_BUCKET_NAME}
       - S3_BASE_URL=${S3_BASE_URL}
       - S3_REGION=${S3_REGION}
+
+      - GIN_MODE=release
     networks:
       - mynet
     deploy:
